--- a/exotic-birds-shop/.github/workflows/deploy.yml
+++ b/exotic-birds-shop/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Deploy to GitHub Pages
 on:
   push:
     branches: [ "master" ]
@@ -13,33 +13,15 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    
     steps:
     - name: Checkout
       uses: actions/checkout@v4
       
-    - name: Setup Node
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        
-    - name: Change to project directory and install dependencies
-      run: |
-        cd exotic-birds-shop
-        npm cache clean --force
-        rm -rf node_modules package-lock.json
-        npm install --legacy-peer-deps
-      
-    - name: Build project
-      run: |
-        cd exotic-birds-shop
-        npm run build
-      env:
-        REACT_APP_WHATSAPP_NUMBER: ${{ secrets.REACT_APP_WHATSAPP_NUMBER }}
-        CI: false
-        
     - name: Setup Pages
       uses: actions/configure-pages@v3
       
@@ -47,14 +29,7 @@ jobs:
       uses: actions/upload-pages-artifact@v2
       with:
         path: ./exotic-birds-shop/build
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+        
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v2
